--- a/D1.3/D1.3_dealii_report.tex
+++ b/D1.3/D1.3_dealii_report.tex
@@ -181,8 +181,7 @@ The second finding is that Kokkos achieves approximately 90\% of the performance
 \begin{figure}
 \centering
 \includegraphics[width=0.8\textwidth]{BK1_1}
-\caption{BK1 performance results on Nvidia H100 GPU with CUDA programming model. Various polynomial orders are tested, and saturation of hardware resources is visible after $10^6$ degrees of freedom. Polynomial order 1 performs the worst due to under-occupation of the single warp. {\color{red} Have not placed the two figures side-by-side as requested as labels are already too small. Please provide new figures.}}
-\label{fig:BK1_1}
+\caption{BK1 performance results on Nvidia H100 GPU with CUDA programming model. Various polynomial orders are tested, and saturation of hardware resources is visible after $10^6$ degrees of freedom. Polynomial order 1 performs the worst due to under-occupation of the single warp.\label{fig:BK1_1}
 \end{figure}
 \begin{figure}
 \centering
